--- a/conf/testHttpServ.ini
+++ b/conf/testHttpServ.ini
@@ -7,18 +7,18 @@
 type = http
 ; 监听端口
 
-listen[] = 10083
+listen[] = 12312
 ; 入口文件
 
-root = '/data/web_deployment/serv/newapi/businessSrc/index.php'
+root = '/data/web_deployment/serv/test/index.php'
 
 ;用来支持多php版本
-php = '/usr/local/services/tsf-1.0/lib/php/bin/php'
+php = '/usr/local/php/bin/php'
 
 
 [setting]
 ; worker进程数
-worker_num = 100
+worker_num = 16
 ; task进程数
 task_worker_num = 0
 ; 转发模式
@@ -30,7 +30,7 @@ daemonize = 1
 package_max_length = 12582912
 buffer_output_size= 12582912
 ; 系统日志
-log_file = '/usr/local/services/tsf-1.0/log/BusinessServ.log'
+log_file = '/data/log/test.log'
 
 ; 心跳  遍历所有连接 interval 内没有发送数据 强制关闭
 heartbeat_check_interval = 60
