--- a/conf/testHttpServ.ini
+++ b/conf/testHttpServ.ini
@@ -38,8 +38,9 @@ heartbeat_idle_time = 600
 
 ;关闭Nagle合并算法，立即发送数据到客户端，提升http服务响应数据
 open_tcp_nodelay = true
-open_cpu_affinity = 1
-open_cpu_affinity = 1
+;目前swoole对于cpu亲和性有bug，最新版本应该已经修复 留待验证
+;open_cpu_affinity = 1
+
 
 ;关闭eof检测
 open_eof_check = false
