--- a/conf/testHttpServ.ini
+++ b/conf/testHttpServ.ini
@@ -1,47 +1,30 @@
 [server]
-
-
-
-//所有的server信息
-;服务类型
+;server type
 type = http
-; 监听端口
-
+; port
 listen[] = 12312
-; 入口文件
-
+; index.php path
 root = '/data/web_deployment/serv/test/index.php'
-
-;用来支持多php版本
+;php path
 php = '/usr/local/php/bin/php'
 
-
 [setting]
-; worker进程数
+; worker num
 worker_num = 16
-; task进程数
+; task num
 task_worker_num = 0
-; 转发模式
 dispatch_mode = 2
-; 守护进程
 daemonize = 1
 
-;post数据最大
+;post max length
 package_max_length = 12582912
 buffer_output_size= 12582912
-; 系统日志
+; log path
 log_file = '/data/log/test.log'
 
-; 心跳  遍历所有连接 interval 内没有发送数据 强制关闭
 heartbeat_check_interval = 60
 heartbeat_idle_time = 600
 
-;关闭Nagle合并算法，立即发送数据到客户端，提升http服务响应数据
-open_tcp_nodelay = true
-open_cpu_affinity = 1
-open_cpu_affinity = 1
-
-;关闭eof检测
 open_eof_check = false
 open_eof_split = false
 
