添加开发自动重载watchdog

--- a/conf/testHttpServ.ini
+++ b/conf/testHttpServ.ini
@@ -4,23 +4,28 @@ type = http
 ; port
 listen[] = 12312
 ; index.php path
-root = '/data/web_deployment/serv/test/index.php'
+root = '/Users/sukui/work/tsf/examples/src/index.php'
 ;php path
-php = '/usr/local/php/bin/php'
+php = '/usr/local/Cellar/php55/5.5.27_2/bin/php'
 
 [setting]
 ; worker num
-worker_num = 16
+worker_num = 10
 ; task num
 task_worker_num = 0
 dispatch_mode = 2
 daemonize = 1
 
+;watchdog
+watchdog = 1
+watch_ext = 'php'
+
+
 ;post max length
 package_max_length = 12582912
 buffer_output_size= 12582912
 ; log path
-log_file = '/data/log/test.log'
+log_file = '/tmp/log/test.log'
 
 heartbeat_check_interval = 60
 heartbeat_idle_time = 600
