修复不能自动reload
swoole framework workerstart  增加 opcache_reset

--- a/conf/testHttpServ.ini
+++ b/conf/testHttpServ.ini
@@ -4,9 +4,9 @@ type = http
 ; port
 listen[] = 12312
 ; index.php path
-root = '/Users/sukui/work/tsf/examples/src/index.php'
+root = '/home/tsf/examples/src/index.php'
 ;php path
-php = '/usr/local/Cellar/php55/5.5.27_2/bin/php'
+php = '/usr/bin/php'
 
 [setting]
 ; worker num
