支持更多后缀监控
支持更多后缀监控，修复startall 配置错误

--- a/conf/testHttpServ.ini
+++ b/conf/testHttpServ.ini
@@ -16,8 +16,9 @@ task_worker_num = 0
 dispatch_mode = 2
 daemonize = 1
 
-;watchdog
+;watchdog  only for development
 watchdog = 1
+;example 'php,html'
 watch_ext = 'php'
 
 
